--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "convert-svg-to-png": "^0.6.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "graphology": "^0.25.4",
     "graphology-generators": "^0.11.2",
     "graphology-layout": "^0.6.1",
+    "graphology-layout-noverlap": "^0.4.2",
+    "graphology-svg": "^0.1.3",
     "lodash": "^4.17.21",
     "node-graphviz": "^0.1.1",
     "pdf-lib": "^1.17.1",
     "seedrandom": "^3.0.5",
+    "sharp": "^0.33.5",
+    "sigma": "^3.0.0",
     "ts-graphviz": "^2.1.5"
   },
   "json.schemas": [],
