--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "seedrandom": "^3.0.5",
     "sharp": "^0.33.5",
     "sigma": "^3.0.0",
-    "ts-graphviz": "^2.1.5"
+    "ts-graphviz": "^2.1.5",
+    "uuid": "^11.0.5"
   },
   "json.schemas": [],
   "devDependencies": {
