--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "graphology": "^0.25.4",
+    "graphology-dag": "^0.4.1",
     "graphology-generators": "^0.11.2",
     "graphology-layout": "^0.6.1",
     "graphology-layout-noverlap": "^0.4.2",
     "graphology-svg": "^0.1.3",
+    "graphology-traversal": "^0.3.1",
     "lodash": "^4.17.21",
     "node-graphviz": "^0.1.1",
     "pdf-lib": "^1.17.1",
