--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "task-generator-backend",
   "version": "1.0.0",
-  "main": "server.tsx",
+  "main": "server.js",
   "scripts": {
     "dev": "ts-node src/server.tsx",
     "build": "tsc",
@@ -23,14 +23,8 @@
     "graphology-layout-noverlap": "^0.4.2",
     "graphology-svg": "^0.1.3",
     "graphology-traversal": "^0.3.1",
-    "lodash": "^4.17.21",
-    "node-graphviz": "^0.1.1",
     "pdf-lib": "^1.17.1",
-    "seedrandom": "^3.0.5",
-    "sharp": "^0.33.5",
-    "sigma": "^3.0.0",
-    "ts-graphviz": "^2.1.5",
-    "uuid": "^11.0.5"
+    "sharp": "^0.33.5"
   },
   "json.schemas": [],
   "devDependencies": {
