--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "ts-node src/server.tsx",
     "build": "tsc",
-    "start": "node ./dist/server.js"
+    "start": "node ./dist/server.js",
+    "postinstall": "patch-package"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
     "graphology-layout": "^0.6.1",
     "graphology-layout-noverlap": "^0.4.2",
     "graphology-svg": "^0.1.3",
+    "graphology-svg-enhanced": "^0.1.5",
     "graphology-traversal": "^0.3.1",
     "pdf-lib": "^1.17.1",
     "sharp": "^0.33.5"
