--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,6 @@
     "resolveJsonModule": true,
     "jsx": "react"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
