--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@pdf-lib/fontkit": "^1.1.1",
     "convert-svg-to-png": "^0.6.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
